--- a/prototypes/css/screen.css
+++ b/prototypes/css/screen.css
@@ -18,6 +18,7 @@ h2 {margin-bottom: 5px;}
 h3 {margin-bottom: 7px;}
 .clear {display: block; width: 100%; clear: both;}
 .divider {width: 100%; display: block; height: 1px; background: #a0a0a0; margin: 10px 0;}
+.hidden {display: none;}
 
 #sidebar h3 {color: #fff;}
 #sidebar ul.items {list-style-type: none; padding: 0; width: 100%;}
@@ -71,6 +72,15 @@ h2.assembla {background: url(../src/assembla_big.gif) left center no-repeat;}
 		BROWSE ISSUE
 ----------------------------*/
 .issue {
+	width: 100%;
+	background-color: #EFEFEF;
+	-webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+  border-radius: 6px;
+}
+.issueHeader {
 	height: 40px;
 	margin-top: 6px;
 	padding: 8px 5px;
@@ -80,6 +90,9 @@ h2.assembla {background: url(../src/assembla_big.gif) left center no-repeat;}
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
   border-radius: 5px;
+}
+.issueHeader.assigned {
+	background: #87CEFA;
 }
 .issue .handle {
 	float: left; display: block;
@@ -119,6 +132,39 @@ h2.assembla {background: url(../src/assembla_big.gif) left center no-repeat;}
 	margin: 0; padding: 8px 5px 8px 0px;
 	font-style: italic;
 }
+.issueInfo {
+	padding: 10px;
+}
+.issueInfo .description {
+	font-style: normal;
+	overflow: visible;
+	width: 90%; height: 100%;
+	padding: 8px;
+	background-color: #fff;
+}
+.issueInfo table {margin-bottom: 0;}
+.issueInfo table td label {font-weight: bold;}
+.issueInfo .issueComplete {
+	display: block;
+	width: 180px; line-height: 30px;
+	background: #fff url(../src/green_stripe.gif) no-repeat;
+	text-align: center; color: #000;
+	border: 1px green solid;
+	-webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; -o-border-radius: 3px; border-radius: 3px;
+}
+.issueInfo .issueComplete.now0 {background-position: -180px 50%;}
+.issueInfo .issueComplete.now25 {background-position: -135px 50%;}
+.issueInfo .issueComplete.now50 {background-position: -90px 50%;}
+.issueInfo .issueComplete.now75 {background-position: -45px 50%; color: #fff;}
+.issueInfo .issueComplete.now100 {background-position: 0px 50%;}
+
+.issueInfo ul.issueCommits {
+	list-style-type: none;
+	padding: 0; margin: 0;
+}
+.issueInfo ul.issueCommits li {
+	margin-bottom: 3px;
+}
 /* --------------------------
 		ISSUE FORM
 ----------------------------*/
@@ -157,8 +203,11 @@ button.button-big {
 button.big-blue-arrow {
 	border: 0;
 	width: 26px; height: 26px;
-	background: url(../src/arrow_right_blue.png) right center no-repeat;
+	background: url(../src/arrow_down_blue.png) right center no-repeat;
 	cursor: pointer;
+}
+button.big-blue-arrow.up {
+	background: url(../src/arrow_up_blue.png) right center no-repeat;
 }
 button.cupid-green {
   background-color: #7fbf4d;
