--- a/src/Resources/templates/auth.html
+++ b/src/Resources/templates/auth.html
@@ -1,10 +1,10 @@
 <html>
 	<head>		
-		<link rel="stylesheet" href="../css/styles.css" />
+		<link rel="stylesheet" href="../css/screen.css" />
 		<script src="../js/prototype.js" type="text/javascript" charset="utf-8"></script>
 		<title>Set your authentication hash</title>		
 	</head>	
-	<body>
+	<body class="dialog">
 		<form id="auth">
 			<label for="username">Username: </label><br/>
 			<input type="text" id="username" /><br/>		
