--- a/src/Resources/templates/newIssue.html
+++ b/src/Resources/templates/newIssue.html
@@ -16,7 +16,7 @@
 			});
 		</script>		
 	</head>
-	<body>
+	<body class="dialog">
 		<form id="dialogNewIssue">
 			<label for="issue_title">Title:</label><br/>						
 			<input type="text" name="issue_title" id="issue_title" /><br/>
