--- a/src/Resources/css/screen.css
+++ b/src/Resources/css/screen.css
@@ -174,13 +174,7 @@ body.dialog {background: none;}
 		ISSUE FORM
 ----------------------------*/
 .issueTable {
-	width: 500px;
-	border: 1px #999 solid;
-	-webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
+	width: 100%; height: 100%;		
 }
 .issueTable input.issueTitle {
 	line-height: 30px;
