--- a/src/Resources/css/screen.css
+++ b/src/Resources/css/screen.css
@@ -42,6 +42,8 @@ h3 {margin-bottom: 7px;}
 	padding-left: 35px;
 	background: url(../images/search.png) 1% 50% no-repeat;
 }
+.projectHeader {position: relative;}
+.projectHeader img#loader {position: absolute; top: -20px; right: 5px;}
 
 h2.github, h2.gcode, h2.assembla {padding-left: 40px; margin-bottom: 10px;}
 h2.github {background: url(../images/github.gif) left center no-repeat;}
